<resources>
    <string name="app_name">GlutenFreeApp</string>
    <string name="main_mapa">Mapa</string>
    <string name="main_lista">Lista</string>
    <string name="main_salir">Salir</string>
    <string name="comercio">Comercio</string>
    <string name="restaurante">Restaurante</string>
    <string name="telefono">Teléfono: </string>
    <string name="direccion">Dirección: </string>
    <string name="llamar">Llamar</string>
    <string name="llegar">Llegar</string>
    <string name="info">Información</string>
    <string name="mapbox_key">pk.eyJ1IjoiZGV2LW1hcmNrIiwiYSI6ImNqcHMwM3pieDAwYWQ0OG8xNjV1b3VrNXgifQ.kGQTu-vJ6Wtlfzc5GWghhA</string>
    <string name="title_activity_mapa">Map</string>
    <string name="filter">Filtro</string>
    <string name="Appinfo">App info</string>
    <string name="Todo">Todo</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="Comercios">Comercios</string>
    <string name="Filtrar">Filtrar</string>
    <string name="FiltroMapa">Filtrar los lugares mostrados en el mapa</string>
    <string name="FiltroLista">Filtrar los lugares mostrados en la lista</string>
    <string name="title_activity_app_info">AppInfo</string>
    <string name="org">Org: Ciudad Jardin</string>
    <string name="app">Nombre de la aplicación: GlutenFreeApp</string>
    <string name="version">Version:  1.0</string>
    <string name="develp">Desarrollador: Ibon García de Cortázar</string>
    <string name="permisos">Permisos necesarios: Permiso de ubicación y permiso de llamadas</string>
    <string name="desc">Descripción: Aplicación de uso simple, principalmente para el uso por parte de personas celiacas. La aplicación señala en el mapa aquellos restaurantes y comercios y o supermercados en los cuales se sirve o se vende comida para celiacos. La aplicación permite llamar a dichos lugares, para poder consultar, reservar o lo que se requiera. Tambien dispone de una función GPS para poder ir a el lugar deseado. </string>
</resources>
