<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".Filtro">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tituloFiltro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:textColor="@color/White"
            android:layout_marginHorizontal="20dp"/>

        <RelativeLayout
            android:id="@+id/controles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloFiltro"
            android:layout_centerHorizontal="true">

            <RadioGroup
                android:id="@+id/grupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/filtro_todos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Todo"
                    android:textSize="22dp"/>

                <RadioButton
                    android:id="@+id/filtro_comercios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comercio"
                    android:textSize="22dp"
                    android:layout_below="@id/filtro_todos"/>

                <RadioButton
                    android:id="@+id/filtro_restaurantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Restaurantes"
                    android:textSize="22dp"
                    android:layout_below="@id/filtro_comercios"/>
            </RadioGroup>

        </RelativeLayout>

        <Button
            android:id="@+id/filtrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/controles"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Filtrar"
            android:textSize="20dp"
            android:onClick="filtrar"/>
    </RelativeLayout>


</RelativeLayout>