<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/Black"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="305dp"
            android:layout_height="86dp"
            android:src="@drawable/ic_mainbtn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_mapa"
            android:textColor="@color/Black"
            android:textSize="46sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/btn1"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/btnLista"
            android:layout_width="305dp"
            android:layout_height="86dp"
            android:src="@drawable/ic_mainbtn"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_lista"
            android:textColor="@color/Black"
            android:textSize="46sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/btn2"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="305dp"
            android:layout_height="86dp"
            android:src="@drawable/ic_mainbtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_salir"
            android:textColor="@color/Black"
            android:textSize="46sp" />
    </RelativeLayout>

</RelativeLayout>