<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".InfoCompleta">


    <ImageView
        android:id="@+id/foto"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:src="@drawable/artepan" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/foto">

        <TextView
            android:id="@+id/nombreTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foto"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="TIPO"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/telefono"
        android:textSize="20dp"
        android:layout_below="@id/tipo"/>

    <TextView
        android:id="@+id/calle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/direccion"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/telefono"/>
    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="PRUEBA 3"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/calle"/>


    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/descripcion">

        <Button
            android:id="@+id/botonLlamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/llamar"
            android:textSize="20dp"
            android:background="@color/Green"
            android:textColor="@color/White"
            android:onClick="llamar"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/botonLlegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/llegar"
            android:textSize="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/Blue"
            android:textColor="@color/White"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:onClick="atras"/>

    </RelativeLayout>

</RelativeLayout>